--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@ $(document).ready(function(){
         alert('没有找到相应的样品名称!');
       }else{
         sample = data.msg;
-        var tmp = $('<div class="col-xs-2"><div class="checkbox"><label><input type="checkbox" name="dispop" value="">' + sample + '</label></div></div>');
+        var tmp = $('<div class="col-xs-2"><div class="checkbox"><label><input type="checkbox" name="dispop" value="' + sample +'">' + sample + '</label></div></div>');
         tmp.appendTo('.show-samples');
       }
     });
