--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <div class="col-xs-4">
 <div class="panel">
     <div class="panel-heading">
-        <h3 class="panel-title">{{ user }},Select a file,chromosome and input a range (<span class="text-danger">required</span>, &lt;100kb):</h3>
+        <h3 class="panel-title">Select a file,chromosome and input a range (<span class="text-danger">required</span>, &lt;100kb):</h3>
     </div>
 <div class="panel-body">
         <div class="form-group">
@@ -163,6 +163,7 @@ $(document).ready(function(){
         $("#results-table").html(tableStr);
         $("#region_table").DataTable({
           dom: 'lBfrtip',
+          "scrollX": true,
           buttons: [
             'csv'
           ]
