--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src='/static/js/bootstrap.min.js'></script>
     <script type="text/javascript" src='/static/datatables/jquery.dataTables.min.js'></script>
     <script type="text/javascript" src='/static/js/bootstrap-select.js'></script>
+    <script type="text/javascript" src="/static/js/multiselect.min.js"></script>
     <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/dataTables.buttons.min.js'></script>
     <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.colVis.min.js'></script>
     <script type="text/javascript" src='/static/datatables/extensions/Buttons/js/buttons.flash.min.js'></script>
