--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>show SNP Index</title>
+    <title>show SNP Index1.10</title>
     <link href={{ url_for('static', filename='datatables/jquery.dataTables.min.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='datatables/extensions/Buttons/css/buttons.dataTables.min.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/bootstrap.css') }} rel="stylesheet">
@@ -34,7 +34,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
               <span class="fa fa-bars color-white"></span>
             </button>
-            <a class="navbar-brand" href="#" data-0="line-height:90px;" data-300="line-height:50px;">Show SNP Index v1.0</a>
+            <a class="navbar-brand" href="#" data-0="line-height:90px;" data-300="line-height:50px;">Show SNP Index v1.10</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav navbar-right">
