--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,6 +3,12 @@
   margin-right: 0px;
   margin-top: 0px;
 }
+.table>tbody>tr>td{
+  text-align: center;
+}
+.table>thead:first-child>tr:first-child>th{
+  text-align: center;
+}
 .btn-search {
 	  background: #424242;
 	  border-radius: 0;
