--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="form-group">
         <div class="input-group input-group-sm">
-            <span class="input-group-addon">End position:</span>
+            <span class="input-group-addon">End &nbsp;&nbsp; position:</span>
             <input type="text" id="pos-end" class="form-control input-group-sm"  name="pos_end" >
         </div>
         </div>
