--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,6 +38,20 @@
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Genomic Variation<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="{{ url_for('main.search_by_regin') }}">Search for Variations by Region</a></li>
+                  <li class="divider"></li>
+                  <li><a href="{{ url_for('main.search_by_gene') }}">Search for Variations in Gene</a></li>
+                </ul>
+              </li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools<span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                  <li><a href="{{ url_for('main.blast') }}">Blast</a></li>
+                </ul>
+              </li>
               <li><a href='http://www.onmath.com'>Contact</a></li>
             </ul>
     </div>
