--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,7 +49,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="{{ url_for('main.blast') }}">Blast</a></li>
+                  <li><a href="{{ url_for('tools.blast') }}">Blast</a></li>
                 </ul>
               </li>
               <li><a href='http://www.onmath.com'>Contact</a></li>
