--- a/app/templates/gene_variation/search_by_regin.html
+++ b/app/templates/gene_variation/search_by_regin.html
@@ -7,7 +7,7 @@
 <div class="panel">
   <h2>Search for Variations in Region:</h2>
     <div class="panel-heading">
-        <h3 class="panel-title">Select a file, chromosome and input a range. (<span class="text-danger">required</span>, &lt;100kb)</h3>
+        <h3 class="panel-title">Select a file, chromosome and input a range. (<span class="text-danger">required</span>, &lt;1000kb)</h3>
     </div>
 <div class="panel-body">
   <div class="row">
@@ -264,7 +264,7 @@ $(document).ready(function(){
     }
     all_info = JSON.stringify(all_info);
     //console.log(all_info);
-    ajaxSend('/get_info',{'all_info': all_info}, function(data){
+    ajaxSend('/get_snp_info',{'all_info': all_info}, function(data){
       if(data.msg == 'error'){
         alert(data.msg);
         return;
