--- a/app/templates/gene_variation/search_by_gene.html
+++ b/app/templates/gene_variation/search_by_gene.html
@@ -105,6 +105,8 @@ function check_gene(info){
   }
 }
 $(document).ready(function(){
+  // multiselect plugin
+  select_plugin()
   $("#select_file").change(function(){
     var fileSelect = $(this).find("option:selected").text();
     ajaxSend('/select_file', {'file': fileSelect}, function(data){
@@ -121,86 +123,6 @@ $(document).ready(function(){
         }
       }
     });
-  });
-  // multiselect plugin
-  $('#multi_d').multiselect({
-    right: '#multi_d_to, #multi_d_to_2',
-    rightSelected: '#multi_d_rightSelected, #multi_d_rightSelected_2',
-    leftSelected: '#multi_d_leftSelected, #multi_d_leftSelected_2',
-    rightAll: '#multi_d_rightAll, #multi_d_rightAll_2',
-    leftAll: '#multi_d_leftAll, #multi_d_leftAll_2',
-
-    search: {
-        left: '<input type="text" name="q" class="form-control" placeholder="Search..." />'
-    },
-
-    moveToRight: function(Multiselect, $options, event, silent, skipStack) {
-        var button = $(event.currentTarget).attr('id');
-
-        if (button == 'multi_d_rightSelected') {
-            var $left_options = Multiselect.$left.find('> option:selected');
-            Multiselect.$right.eq(0).append($left_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$right.eq(0).find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$right.eq(0));
-            }
-        } else if (button == 'multi_d_rightAll') {
-            var $left_options = Multiselect.$left.children(':visible');
-            Multiselect.$right.eq(0).append($left_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$right.eq(0).find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$right.eq(0));
-            }
-        } else if (button == 'multi_d_rightSelected_2') {
-            var $left_options = Multiselect.$left.find('> option:selected');
-            Multiselect.$right.eq(1).append($left_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$right.eq(1).find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$right.eq(1));
-            }
-        } else if (button == 'multi_d_rightAll_2') {
-            var $left_options = Multiselect.$left.children(':visible');
-            Multiselect.$right.eq(1).append($left_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$right.eq(1).eq(1).find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$right.eq(1));
-            }
-        }
-    },
-
-    moveToLeft: function(Multiselect, $options, event, silent, skipStack) {
-        var button = $(event.currentTarget).attr('id');
-
-        if (button == 'multi_d_leftSelected') {
-            var $right_options = Multiselect.$right.eq(0).find('> option:selected');
-            Multiselect.$left.append($right_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$left.find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$left);
-            }
-        } else if (button == 'multi_d_leftAll') {
-            var $right_options = Multiselect.$right.eq(0).children(':visible');
-            Multiselect.$left.append($right_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$left.find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$left);
-            }
-        } else if (button == 'multi_d_leftSelected_2') {
-            var $right_options = Multiselect.$right.eq(1).find('> option:selected');
-            Multiselect.$left.append($right_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$left.find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$left);
-            }
-        } else if (button == 'multi_d_leftAll_2') {
-            var $right_options = Multiselect.$right.eq(1).children(':visible');
-            Multiselect.$left.append($right_options);
-
-            if ( typeof Multiselect.callbacks.sort == 'function' && !silent ) {
-                Multiselect.$left.find('> option').sort(Multiselect.callbacks.sort).appendTo(Multiselect.$left);
-            }
-        }
-    }
   });
   $('#submit').click(function(){
     var gene_name = $("#gene_name").val();
