limit query gene number and change expression nav

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -55,7 +55,7 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Genomic Expression<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="{{ url_for('expr.show_by_gene') }}">Expression</a></li>
+                  <li><a href="{{ url_for('expr.show_by_gene') }}">Search for Expression by Gene</a></li>
                 </ul>
               </li>
               <li><a href='http://www.onmath.com'>Contact</a></li>
