add loading hint

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>show SNP Index1.10</title>
+    <title>show SNP Index1.12</title>
     <link href={{ url_for('static', filename='datatables/jquery.dataTables.min.css') }} rel="stylesheet">
+    <link href={{ url_for('static', filename='css/jquery.dataTables.min.css') }} rel="stylesheet">
+    <link href={{ url_for('static', filename='css/main.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='datatables/extensions/Buttons/css/buttons.dataTables.min.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/bootstrap.css') }} rel="stylesheet">
     <link href={{ url_for('static', filename='css/bootstrap-select.css') }} rel="stylesheet">
