--- a/app/templates/gene_variation/search_by_regin.html
+++ b/app/templates/gene_variation/search_by_regin.html
@@ -134,6 +134,10 @@
     <input class="btn btn-success btn-sm"  id="submit" type="submit"  value="Submit">
   </div>
   <hr/>
+  <!-- add loading hint -->
+  <div id="query_hint" class="query_hint" style="display:none">
+  <img src="/static/images/hint.gif" />正在努力查询，请稍等...
+  </div>
   <h2>Search Results:</h2>
   <div id="results-table"></div>
 {% endblock %}
