--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,7 +51,9 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Tools<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="{{ url_for('tools.blast') }}">Blast</a></li>
+                    <li><a href="http://120.76.160.204/viroblast/viroblast.php">Blast</a></li>
+                    <li class="divider"></li>
+                    <li><a href="{{ url_for('tools.locus_identifier_search') }}">Search Locus Identidier Gene</a></li>
                 </ul>
               </li>
               <li class="dropdown">
