update gene_locus show results

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -36,7 +36,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
               <span class="fa fa-bars color-white"></span>
             </button>
-            <a class="navbar-brand" href="#" data-0="line-height:90px;" data-300="line-height:50px;">Show SNP Index v1.10</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}" data-0="line-height:90px;" data-300="line-height:50px;">Home</a>
           </div>
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
             <ul class="nav navbar-nav navbar-right">
