--- a/app/templates/expr/show_by_gene.html
+++ b/app/templates/expr/show_by_gene.html
@@ -62,7 +62,7 @@
 </div>
 </div>
 <div class="panel-body">
-  <input class="btn btn-success btn-sm"  id="submit" type="submit"  value="Submit">
+  <input class="btn btn-primary btn-sm"  id="submit" type="submit"  value="Submit">
 </div>
 <hr/>
 <!-- add loading hint -->
@@ -93,7 +93,7 @@ $(document).ready(function(){
     ajaxSend('/select_file', {'file': fileSelect}, function(data){
       var msg = data.msg;
       if(msg == 'error'){
-        alert('没有找到相应的文件!');
+        alert('not find samples!');
         $("#multi_d").empty();
       }else{
         $("#multi_d").empty();
@@ -135,7 +135,7 @@ $(document).ready(function(){
           var tmp = $('<div id="main" style="width: 1250px;height:400px;"></div>');
           tmp.appendTo("#results-plot");
           generate_plot(createPlotData(groupA, groupB, data.bodyData));
-          tableStr = createTable(data.headData, data.bodyData);
+          tableStr = createTable(data.headData, data.bodyData, tableType='expr');
           $("#results-table").html(tableStr);
           $("#region_table").DataTable({
             dom: 'lBfrtip',
