--- a/app/templates/gene_variation/search_by_regin.html
+++ b/app/templates/gene_variation/search_by_regin.html
@@ -131,7 +131,7 @@
 </div>
 </div>
   <div class="panel-body">
-    <input class="btn btn-success btn-sm"  id="submit" type="submit"  value="Submit">
+    <input class="btn btn-primary btn-sm"  id="submit" type="submit"  value="Submit">
   </div>
   <hr/>
   <!-- add loading hint -->
