change locus result table color

--- a/app/static/css/locus_results.css
+++ b/app/static/css/locus_results.css
@@ -11,7 +11,7 @@
  font-family: Arial,helvetica,sans-serif;
  font-weight: bold;
  font-size: medium;
- background-color: #33998d;
+ background-color: #1c699d;
  color:#FFF;
  vertical-align: top;
  text-align: left;
